deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-crud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-crud
  template:
    metadata:
      labels:
        app: api-crud
    spec:
      containers:
        - name: api-crud
          image: christrova/api-crud:latest
