services.yml
apiVersion: v1
kind: Service
metadata:
  name: api-crud
spec:
  selector:
    app: api-crud
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
