ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-crud
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-crud
                port:
                  number: 80
